--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -32,7 +32,7 @@
                 android:visibility="visible">
 
                 <EditText
-                    android:id="@+id/editText"
+                    android:id="@+id/edtPhone"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
 
@@ -41,12 +41,12 @@
                     android:inputType="phone" />
 
                 <EditText
-                    android:id="@+id/editText2"
+                    android:id="@+id/edtPassword"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_alignParentLeft="true"
                     android:layout_alignParentStart="true"
-                    android:layout_below="@+id/editText"
+                    android:layout_below="@+id/edtPhone"
                     android:layout_marginTop="10dp"
                     android:ems="10"
                     android:hint="@string/password"
@@ -56,7 +56,7 @@
                     android:id="@+id/btn_login"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_below="@+id/editText2"
+                    android:layout_below="@+id/edtPassword"
                     android:layout_marginTop="41dp"
                     android:background="@drawable/ripple_effect_login"
                     android:onClick="onLoginClick"
@@ -101,7 +101,7 @@
                     android:layout_height="wrap_content"
                     android:layout_alignParentLeft="true"
                     android:layout_alignParentStart="true"
-                    android:layout_below="@+id/editText2"
+                    android:layout_below="@+id/edtPassword"
                     android:layout_marginTop="15dp"
                     android:clickable="true"
                     android:text="@string/forget_password"
