--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -77,13 +77,13 @@
                 android:textAllCaps="false"
                 android:textColor="@color/color_white" />
 
-            <ImageView
+            <com.facebook.login.widget.LoginButton
                 android:id="@+id/fblogin"
                 android:layout_width="wrap_content"
-                android:layout_height="30dp"
+                android:layout_height="wrap_content"
                 android:layout_below="@id/btn_login"
                 android:layout_centerHorizontal="true"
-                android:src="@drawable/fblogin" />
+                />
 
             <TextView
                 android:id="@+id/tvRegistration"
