--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -77,15 +77,27 @@
                 android:textAllCaps="false"
                 android:textColor="@color/color_white" />
 
+            <Button
+                android:id="@+id/btn_signup"
+                android:layout_width="match_parent"
+                android:layout_height="40dp"
+                android:layout_alignParentStart="true"
+                android:layout_below="@+id/btn_login"
+                android:layout_marginBottom="20dp"
+                android:background="@drawable/ripple_effect_reg"
+                android:text="Sign Up"
+                android:textAllCaps="false"
+                android:textColor="@color/color_white" />
+
             <com.facebook.login.widget.LoginButton
                 android:id="@+id/fblogin"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_below="@id/btn_login"
+                android:layout_below="@id/btn_signup"
                 android:layout_centerHorizontal="true"
                 />
 
-            <TextView
+            <!--<TextView
                 android:id="@+id/tvRegistration"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
@@ -99,12 +111,12 @@
                 android:text="Create a new account !"
                 android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                 android:textColor="@color/colorPrimary"
-                android:typeface="normal" />
+                android:typeface="normal" />-->
 
             <View
                 android:layout_width="match_parent"
                 android:layout_height="40dp"
-                android:layout_below="@id/tvRegistration" />
+                android:layout_below="@id/fblogin" />
 
         </RelativeLayout>
 
